--- a/app/src/main/res/layout/activity_editar_producto.xml
+++ b/app/src/main/res/layout/activity_editar_producto.xml
@@ -5,43 +5,51 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-<EditText
-android:id="@+id/editTextNombre"
-android:layout_width="0dp"
-android:layout_height="wrap_content"
-android:hint="Nombre del Producto"
-android:layout_margin="16dp"
-app:layout_constraintEnd_toEndOf="parent"
-app:layout_constraintStart_toStartOf="parent"
-app:layout_constraintTop_toTopOf="parent"/>
+    <EditText
+        android:id="@+id/editTextNombre"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
+        android:layout_margin="16dp"
+        android:backgroundTint="@color/dark_red"
+        android:hint="Nombre del Producto"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.812"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.42" />
 
-<EditText
-android:id="@+id/editTextPrecio"
-android:layout_width="0dp"
-android:layout_height="wrap_content"
-android:hint="Precio"
-android:layout_margin="16dp"
-app:layout_constraintTop_toBottomOf="@id/editTextNombre"
-app:layout_constraintEnd_toEndOf="parent"
-app:layout_constraintStart_toStartOf="parent"/>
+    <EditText
+        android:id="@+id/editTextPrecio"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
+        android:layout_margin="16dp"
+        android:backgroundTint="@color/crimson"
+        android:hint="Precio"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/editTextNombre" />
 
-<EditText
-android:id="@+id/editTextStock"
-android:layout_width="0dp"
-android:layout_height="wrap_content"
-android:hint="Stock"
-android:layout_margin="16dp"
-app:layout_constraintTop_toBottomOf="@id/editTextPrecio"
-app:layout_constraintEnd_toEndOf="parent"
-app:layout_constraintStart_toStartOf="parent"/>
+    <EditText
+        android:id="@+id/editTextStock"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
+        android:layout_margin="16dp"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="@color/crimson"
+        android:hint="Stock"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/editTextPrecio" />
 
-<Button
-android:id="@+id/buttonActualizar"
-android:layout_width="wrap_content"
-android:layout_height="wrap_content"
-android:text="Actualizar"
-android:layout_margin="16dp"
-app:layout_constraintTop_toBottomOf="@id/editTextStock"
-app:layout_constraintEnd_toEndOf="parent"
-app:layout_constraintStart_toStartOf="parent"/>
+    <Button
+        android:id="@+id/buttonActualizar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:backgroundTint="@color/crimson"
+        android:text="Actualizar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/editTextStock" />
     </androidx.constraintlayout.widget.ConstraintLayout>
